<resources>
    <string name="app_name">Beppers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="email_addresss">Email Address/ MobileNumber</string>
    <string name="password">Password *</string>
    <string name="passwords">Password</string>
    <string name="has_tag"> has been tagged in the post.</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="forgot_passwords">Forgot password ?</string>
    <string name="username_or_email">Username or Mobile Number</string>
    <string name="email_mobile">Email/MobileNumber</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up!</string>
    <string name="sign_ups">Sign up</string>
    <string name="welcome_back_you_ve_been_missed">Welcome Back you\'ve been missed!</string>
    <string name="let_s_sign_you_in">Let\'s sign you in,</string>
    <string name="sign_in">Sign in</string>
    <string name="namen">Enter Name *</string>
    <string name="name">Enter Name</string>
    <string name="names">Name *</string>
    <string name="email">Enter Email</string>
    <string name="enter_username">Username *</string>
    <string name="enter_usernames">Enter Username</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="mobile_numbers">Mobile Number *</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="dd_mm_yy">dd/mm/yyyy</string>
    <string name="log_in">Log in</string>
    <string name="log_ins">Log in!</string>
    <string name="all_ready_have_an_account">Already have an account?</string>
    <string name="create_your_user_account">Create your User\naccount,</string>
    <string name="setting">Settings</string>
    <string name="search">Search</string>
    <string name="title">Hello\nWorld!</string>
    <string name="title_m">Title</string>
    <string name="let_us_know_what_typr_you_need">Let us know what type of \naccount you need?</string>
    <string name="dummy_text">Loreum ipsum dolor sit amet, consete sadip \n selite sed diam non</string>
    <string name="free_text">Finding difficult to get clients? Never be worried anymore! Sign up and share your skills!</string>
    <string name="business_text">Want to take your business online and reach to more people? Then you are at right place. </string>
    <string name="individual_text">An Individual or a beauty influencer! Never mind. Sign up here to explore and explode..</string>
    <string name="individual">Individual</string>
    <string name="select">Select</string>
    <string name="iam_business">I\'m a Business</string>
    <string name="iam_a_freelancer">I\'m a Freelancer</string>
    <string name="shop_name">Shop Name</string>
    <string name="business_name">Business Name *</string>
    <string name="email_id_optional">Email Id *</string>
    <string name="enter_password">Enter Password</string>
    <string name="address">Address *</string>
    <string name="type_complete_address">Type Business Address</string>
    <string name="type_fr_address">Type Freelancer Locality</string>
    <string name="type_mobile_number">Type Mobile Number</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="choose_categoriess">Choose Categories *</string>
    <string name="choose_location">Choose Location</string>
    <string name="services_for">Services for *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kids">Kids</string>
    <string name="shop_timing">Shop Timings *</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="attachment_cetrificate">Attach Certificates of Proof *</string>
    <string name="i_e_any_governemnt_id">(i.e., any Government ID)</string>
    <string name="i_e_any_business_licenses">(Business licenses)</string>
    <string name="create_your_bussinness_account">Create your\nBusiness account,</string>
    <string name="upload">Upload</string>
    <string name="create_your_freelance_account">Create your\nFreelancer account,</string>
    <string name="explore">Explore</string>
    <string name="trending">Trending</string>
    <string name="recommended">Recommended</string>
    <string name="recent">Recent</string>
    <string name="profiles">Profiles</string>
    <string name="locations">Locations</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="all">All</string>
    <string name="view_all">View All</string>
    <string name="user">User</string>
    <string name="post">Posts</string>
    <string name="add_description">Add Description</string>
    <string name="type_here">Type here</string>
    <string name="location">Location *</string>
    <string name="tag">Tag</string>
    <string name="confirm">Confirm</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="service_information">Service Information</string>
    <string name="services">Services</string>
    <string name="gallery">Gallery</string>
    <string name="timings">Timings</string>
    <string name="shop_informatin">Shop Information</string>
    <string name="next">Next</string>
    <string name="version_name">1.0</string>
    <string name="please_enter_user_name">Please enter user name or mobile no</string>
    <string name="please_enter_user">Please enter your user name</string>
    <string name="please_enter_email">Please enter your user email</string>
    <string name="invalid_email">Invalid Email address</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="please_enter_characters">Password should be between 5 to 10 characters long</string>
    <string name="please_enter_dod">Please select your date of birth</string>
    <string name="please_enter_mobile">Please enter your mobile number</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_please_go_to_setting_enable_permission">PermissionDenied ...Please go to setting and enable permission</string>
    <string name="all_permissions_denied">All permissions denied</string>
    <string name="all_permissions_granted">All permissions granted</string>
    <string name="oops_no_more_data_found">No Data Found.</string>
    <string name="please_select_start_date">Please select your start date</string>
    <string name="please_enter_shop_name">Please enter your shop name</string>
    <string name="please_enter_username_name">Please enter your username name</string>
    <string name="please_enter_business_name">Please enter your business name</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="please_enter_address">Please enter your address</string>
    <string name="please_enter_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_phone">Please enter valid phone number</string>
    <string name="please_enter_pincode">Please enter your pincode</string>
    <string name="please_validate_pincode">Please validate pincode</string>
    <string name="please_enter_choose_location">Please choose your location</string>
    <string name="please_upload_file">Please upload file</string>
    <string name="please_upload_profile">Please upload profile</string>
    <string name="please_select_services">Please select services</string>
    <string name="please_select_categories">Please select categories</string>
    <string name="please_select_monday_time">Please select monday time</string>
    <string name="please_select_monday_end_time">Please select monday end time</string>
    <string name="please_select_tuesday_time">Please select tuesday time</string>
    <string name="please_select_tuesday_end_time">Please select tuesday end time</string>
    <string name="please_select_wednesday_time">Please select wednesday time</string>
    <string name="please_select_wednesday_end_time">Please select wednesday end time</string>
    <string name="please_select_thursday_time">Please select thursday time</string>
    <string name="please_select_thrusday_end_time">Please select thursday end time</string>
    <string name="please_select_friday_time">Please select friday time</string>
    <string name="please_select_friday_end_time">Please select friday end time</string>
    <string name="please_select_saturday_time">Please select saturday time</string>
    <string name="please_select_saturday_end_time">Please select saturday end time</string>
    <string name="please_select_sunday_time">Please select sunday time</string>
    <string name="please_select_sunday_end_time">Please select sunday end time</string>
    <string name="please_select_timings">Please select timings</string>
    <string name="please_enter_description">Please enter your description</string>
    <string name="please_enter_location">Please enter location</string>
    <string name="please_enter_tag">Please enter tag</string>
    <string name="add_a_comment">Add a comment....</string>
    <string name="please_enter_comment">Please enter comment</string>
    <string name="description">Description </string>
    <string name="descriptions">Description *</string>
    <string name="shop_description">Shop Description</string>
    <string name="business_description">Business Description</string>
    <string name="pincode">Pin Code *</string>
    <string name="pincodes">Enter Pin Code </string>
    <string name="category">Category</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_select_category">Please select category</string>
    <string name="internal_storage">Internal storage</string>
    <string name="filter">Filter</string>
    <string name="submit">Submit</string>
    <string name="no_category_found">No Category Found</string>
    <string name="notification">Notifications</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="send_instructions">Send</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="create_new_password">Create new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="bookmark">BookMark</string>
    <string name="rating">Rating</string>
    <string name="add_rating">Add Rating</string>
    <string name="add_review">Add Review</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="likes_and_comments">Likes and Comments</string>
    <string name="messages">Messages</string>
    <string name="follower_requests">Follower Requests</string>
    <string name="pending_invitations">Pending Invitations</string>
    <string name="blocked_accounts">Blocked Accounts</string>
    <string name="follow_amp_unfollow"><![CDATA[Follow & Following]]></string>
    <string name="help">Help &amp; Support  </string>
    <string name="time_slot">Time Slot</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="account_privacy">Private Account</string>
</resources>