<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <variable
            name="loginviewmodel"
            type="com.mdq.social.app.data.viewmodels.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradiant"
     >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_login"/>

        <TextView
            android:id="@+id/textView3"
            style="@style/text_style_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/let_s_sign_you_in"
            android:fontFamily="@font/gilroyextrabold"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/forgot_passwords"
            android:textSize="14sp"
            android:fontFamily="@font/gilroyextrabold"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/CardForEditTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/CardForEditTextTextPersonName4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.67" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_logins"
            android:gravity="center"
            android:onClick="@{()->loginviewmodel.loginClick()}"
            android:padding="18dp"
            android:text="@string/sign_in"
            android:elevation="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/gilroyextrabold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/CardForEditTextTextPersonName4"
            app:layout_constraintStart_toStartOf="@+id/CardForEditTextTextPersonName4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="200dp"
            android:onClick="@{()->loginviewmodel.signupClick()}"
            android:text="@string/don_t_have_an_account"
            style="@style/text_style_bold_light"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/CardForEditTextTextPersonName4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:onClick="@{()->loginviewmodel.signupClick()}"
            android:padding="10dp"
            android:text="@string/sign_up"
            style="@style/text_style_bold_title"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView16"
            style="@style/text_style_bold_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/welcome_back_you_ve_been_missed"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:text="@string/login"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            style="@style/text_style_bold_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:id="@+id/CardForEditTextTextPersonName3"
            android:background="@drawable/bg_login_back"
            app:cardBackgroundColor="#66D5D5D8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17">
            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:text="@={loginviewmodel.username}"
                android:hint="@string/username_or_email"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColorHint="@color/white"
                android:textColor="@android:color/white"
                style="@style/text_style_bold_small_title"
                />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/passwords"
            style="@style/text_style_bold_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/CardForEditTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/CardForEditTextTextPersonName3" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
            app:cardElevation="0dp"
            android:id="@+id/CardForEditTextTextPersonName4"
            android:background="@drawable/bg_login_back"
            app:cardBackgroundColor="#66D5D5D8"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/CardForEditTextTextPersonName3"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.01999998" >
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/editTextTextPersonName4"
                style="@style/text_style_bold_small_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:fontFamily="@font/gilroylight"
                android:padding="20dp"
                android:text="@={loginviewmodel.password}"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="V 1.1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>