<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="forgotPasswordViewModel"
            type="com.mdq.social.app.data.viewmodels.forgot.ForgotPasswordViewModel" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:onClick="@{()->forgotPasswordViewModel.loginClick(5)}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_button" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_style_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/otp_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView80"
        style="@style/text_style_normal_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="We've send a verification code to your\nemail-+918667644520"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_login_back"
        android:ems="10"
        android:hint="@string/enter_verification_code"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:text="@={forgotPasswordViewModel.otp}"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView80" />

    <TextView
        android:id="@+id/textView135"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_logins"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="@{()->forgotPasswordViewModel.loginClick(2)}"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName22"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName22"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName22" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>